--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Falabella Deeplink</title>
+	<meta property="al:ios:url" content="falabella://product/880453526" />
+	<meta property="al:ios:app_store_id" content="947145705" />
+	<meta property="al:ios:app_name" content="Falabella" />
+</head>
+<body>	
+</body>
+</html>
